[package]
name = "anorm"
version = "0.1.3"
edition = "2021"
authors = ["plucky"]
description = "Implement Create, Read, Update, and Delete (CRUD) methods for sqlx."
#
readme = "readme.md"
keywords = [
    "orm",
    "sql",
    "sqlx",
    "crud",
]
categories = ["database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cody-why/anorm"
documentation = "https://docs.rs/crate/anorm/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anorm-macros = {version ="0.1.3", optional = true}

# replace latest version with your local version
[patch.crates-io]
anorm-macros = {path = "anorm-macros"}


[dev-dependencies]
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["macros"] }


[features]
default = ["mysql"]
mysql=["anorm-macros/mysql"]
postgres=["anorm-macros/postgres"]
sqlite=["anorm-macros/sqlite"]
mssql=["anorm-macros/mssql"]


[workspace]
members = [
"anorm-macros",

]
