[package]
name = "anorm-macros"
version = "0.1.3"
edition = "2021"
authors = ["plucky"]
description = "Implement Create, Read, Update, and Delete (CRUD) methods for sqlx."
#documentation = "https://docs.rs/co_orm/"
readme = "../readme.md"
keywords = [
    "orm",
    "sql",
    "sqlx",
    "crud",
]
categories = ["database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cody-why/anorm"

[dependencies]
quote = "1.0"
syn = {version = "2", features = ["extra-traits"]} 
Inflector = "0"

[lib]
proc-macro = true

[features]
default = ["mysql"]
mysql=[]
postgres=[]
sqlite=[]
mssql=[]
